OpenVPN
Copyright (C) 2002-2003 James Yonan <jim@yonan.net>

$Id: ChangeLog,v 1.86.2.4 2003/07/22 01:17:41 jimyonan Exp $
	
Upcoming version 1.5.0

* Added TCP support via the new --proto
  option.
* Renamed udp-centric options such as
  --udp-mtu to --link-mtu (old option
  names preserved for compatibility).
* Ported to Windows XP using mingw and a
  TAP driver derived from the Cipe-Win32
  project by Damion K. Wilson
  (still experimental and I have not
  yet tested on non-XP Windows).
* Added --show-adapters flag for
  windows version.
* Reworked the SSL/TLS packet acknowledge
  code to better handle certain corner
  cases.
* Turned off the default enabling of
  IP forwarding in the
  sample-scripts/openvpn.init script
  for Redhat.
  Forwarding can be enabled by users
  in their --up scripts or firewall
  config.
* Added --up-restart option based on
  suggestion from Sean Reifschneider.
* Protocol compatibility is maintained
  with the 1.4.x and 1.3.x series.
  If you are connecting to a 1.3.x peer,
  you must use the --disable-occ option
  on the 1.3.x peer if you are using
  TLS mode.

2003.07.15 -- Version 1.4.2

* Removed adaptive bandwidth from
  --mtu-dynamic -- its absence appears
  to work better than its existence (1.4.1.2).
* Minor changes to --shaper to fix long
  retransmit timeouts at low bandwidth
  (1.4.1.2).
* Added LOG_RW flag to openvpn.h for
  debugging (1.4.1.2).
* Silenced spurious configure warnings (1.4.1.2).
* Backed out --dev-name patch, modified --dev
  to offer equivalent functionality (1.4.1.4).
* Added an optional parameter to --daemon and
  --inetd to support the passing of a custom
  program name to the system logger (1.4.1.5).
* Add compiled-in options to the program title
  (1.4.1.5).
* Coded the beginnings of a WIN32 port (1.4.1.5).
* Succeeded in porting to Win32 Mingw environment
  and running loopback tests (1.4.1.6).  Still
  need a kernel driver for full Win32
  functionality.
* Fixed a bug in error.h where